fix : texarea height cut off problem

--- a/app/components/addporto.module.css
+++ b/app/components/addporto.module.css
@@ -32,14 +32,7 @@
   transform: translate(-50%, -50%);
   scrollbar-width: none;
 }
-.addporto_bg form {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: start;
-  gap: 20px;
-  width: 100%;
-}
+
 .button_action {
   width: 100%;
   display: flex;
