--- a/app/globals.css
+++ b/app/globals.css
@@ -67,7 +67,7 @@ textarea {
   color: var(--secondary);
 }
 textarea {
-  height: 100px;
+  min-height: 100px;
   resize: none;
 }
 
